<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>no.nav.foreldrepenger.felles</groupId>
        <artifactId>fp-bom</artifactId>
        <version>0.2.7</version>
    </parent>

    <groupId>no.nav.foreldrepenger.abonnent</groupId>
    <artifactId>fpabonnent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <name>fpabonnent :: Root</name>

    <modules>
        <module>migreringer</module>
        <module>domene</module>
        <module>web</module>
    </modules>

    <properties>
        <revision>4.0-SNAPSHOT</revision>
        <java.version>17</java.version>
        <!-- default argLine for surefire-plugin -->
        <felles.version>4.1.25</felles.version>
        <prosesstask.version>3.1.7</prosesstask.version>
        <fp-kontrakter.version>6.1.19</fp-kontrakter.version>

        <!-- Eksterne -->

        <avro.version>1.11.0</avro.version>
        <confluent.version>7.0.1</confluent.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>no.nav.foreldrepenger.abonnent</groupId>
                <artifactId>domene</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.abonnent</groupId>
                <artifactId>migreringer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.abonnent</groupId>
                <artifactId>migreringer</artifactId>
                <version>${project.version}</version>
                <type>test-jar</type>
            </dependency>

            <dependency>
                <groupId>no.nav.foreldrepenger.felles</groupId>
                <artifactId>felles</artifactId>
                <version>${felles.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>no.nav.vedtak.prosesstask</groupId>
                <artifactId>prosesstask-root</artifactId>
                <version>${prosesstask.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.felles.integrasjon</groupId>
                <artifactId>felles-integrasjon-pom</artifactId>
                <version>${felles.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.felles</groupId>
                <artifactId>felles-db</artifactId>
                <version>${felles.version}</version>
            </dependency>

            <dependency>
                <groupId>no.nav.foreldrepenger.kontrakter</groupId>
                <artifactId>abonnent-v2</artifactId>
                <version>${fp-kontrakter.version}</version>
            </dependency>

            <!-- Transitive avh. versjoner for å sikre unikhet (enforcer dependencyConvergence).  Skal ikke benyttes direkte av vår egen kode. -->
            <dependency>
                <groupId>com.fasterxml</groupId>
                <artifactId>classmate</artifactId>
                <version>1.5.1</version>
            </dependency>

            <!-- Kafka -->
            <dependency>
                <groupId>org.apache.avro</groupId>
                <artifactId>avro</artifactId>
                <version>${avro.version}</version>
            </dependency>
            <dependency>
                <groupId>io.confluent</groupId>
                <artifactId>kafka-schema-registry-client</artifactId>
                <version>${confluent.version}</version>
            </dependency>
            <dependency>
                <groupId>io.confluent</groupId>
                <artifactId>kafka-connect-avro-converter</artifactId>
                <version>${confluent.version}</version>
            </dependency>
            <dependency>
                <groupId>io.confluent</groupId>
                <artifactId>kafka-avro-serializer</artifactId>
                <version>${confluent.version}</version>
            </dependency>
            <dependency>
                <groupId>io.confluent</groupId>
                <artifactId>kafka-streams-avro-serde</artifactId>
                <version>${confluent.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>io.swagger</groupId>
                        <artifactId>swagger-annotations</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.hibernate.validator</groupId>
                        <artifactId>hibernate-validator</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>com.sun.activation</groupId>
                        <artifactId>jakarta.activation</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.checkerframework</groupId>
                        <artifactId>checker-qual</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.glassfish.jersey.core</groupId>
                        <artifactId>jersey-common</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>com.google.errorprone</groupId>
                        <artifactId>error_prone_annotations</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>com.oracle.ojdbc</groupId>
            <artifactId>ojdbc8</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <configuration>
                    <flattenMode>bom</flattenMode>
					<flattenedPomFilename>.flattened</flattenedPomFilename>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <scm>
        <connection>scm:git:https://github.com/navikt/fpabonnent.git</connection>
        <developerConnection>scm:git:https://github.com/navikt/fpabonnent.git</developerConnection>
        <url>https://github.com/navikt/fpabonnent</url>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>fpabonnent</id>
            <name>Github navikt Maven Packages</name>
            <url>https://maven.pkg.github.com/navikt/fpabonnent</url>
        </repository>
    </distributionManagement>

</project>
